--- a/source/assets/stylesheets/base/_base.sass
+++ b/source/assets/stylesheets/base/_base.sass
@@ -1,2 +1,18 @@
 body
+  padding-left: calc(1rem + 6.25vw)
+  padding-right: calc(1rem + 6.25vw)
+  display: flex
+  flex-direction: column
+  justify-content: center
+  min-height: 100vh
   font-size: 16px
+  color: $color-foreground
+  background-color: $color-background
+
+h1
+  font-size: calc(2rem + 6.25vw)
+  line-height: 0.75
+
+p
+  margin-top: calc(1rem + 3.125vw)
+  font-size: calc(1rem + 3.125vw)
