--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,2 +1,2 @@
-h1 Oi, eu sou o <em>name</em>
-p Sou um <em>title</em> <em>description</em> <em>function</em> <em>area</em>
+h1 Oi, eu sou o <span>Caê</span>.
+p <span>Designer</span> <span>brasileiro</span> <span>que convive diariamente com</span> <span>design centrado no usuário</span>
